# Neuvisys-analysis

./: 3_matching_homography_corr.py  Analysis-Plots.ipynb  Analysis-Statistics.ipynb  Analysis_Tuning.ipynb  EventAnalysis.py  Neuvisys.ipynb  README.md  Supervised.ipynb  Supervised_Learned.ipynb  Supervised_Random.ipynb  Utils.ipynb  aedat_tools.py  configuration_planner.py  dev.py  environment.yml  event_analysis.py  gui.py  load_aedat.py  parameter_analysis.py  pix2nvs.py  plot.py  pyproject.toml  requirements.txt  rosbag2aedat.py  scripts.py  spiking_network.py
aedat_tools/: aedat_tools.py  build_aedat4.py
configuration_planning/: planner.py
deprecated/: deprecated.py
driving_dataset/: aedat_tools.py  export.py
event_statistics/: event_analysis.py  frame_analysis.py
gabor_fitting/: gabbor_fitting.py
graphical_interface/: gui.py
motor_control/: control.py
neuvisys_statistics/: display_weights.py  gabbor_fitting.py  network_statistics.py  spike_train.py
planning/: planner.py
spiking_network/: display.py  spiking_network.py
src/: dev.py  scripts.py
src/motor_control/Faulhaber/: CMakeLists.txt  GOTO.cpp  MOVEOF.cpp  main.cpp
src/motor_control/Faulhaber/.svn/: all-wcprops  entries
src/motor_control/Faulhaber/.svn/text-base/: Makefile.svn-base  main.cpp.svn-base
src/motor_control/Faulhaber/libserie/: CMakeLists.txt  Faulhaber.cpp  Faulhaber.hpp  comserie.cpp  comserie.hpp
src/motor_control/Faulhaber/libserie/.svn/: all-wcprops  entries
src/motor_control/Faulhaber/libserie/.svn/text-base/: comserie.cpp.svn-base  comserie.hpp.svn-base
(+104 files in other folders)
